--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ timezone:
 
 
 
+swiftype_key: apqscvSKs5t2azRkar11
 
 # URL 土豪专用域名
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
