--- a/themes/next/langua/zh-tw.yml
+++ b/themes/next/langua/zh-tw.yml
@@ -9,7 +9,6 @@ menu:
   categories: 分類
   tags: 標籤
   about: 關於
-  search: 檢索
 
 
 sidebar:
@@ -17,7 +16,6 @@ sidebar:
   toc: 文章目錄
 
 post:
-  sticky: 置頂
   posted: 發表於
   in: 分類於
   read_more: 閱讀全文
@@ -36,18 +34,18 @@ footer:
 counter:
   tag_cloud:
     zero: 暫無標籤
-    one: 目前共有 1 個標籤
-    other: "目前共有 %d 個標籤"
+    one: 目前共計 1 個標籤
+    other: "目前共計 %d 個標籤"
 
   categories:
     zero: 暫無分類
-    one: 目前共有 1 個分類
-    other: "目前共有 %d 個分類"
+    one: 目前共計 1 個分類
+    other: "目前共計 %d 個分類"
 
   archive_posts:
     zero: 暫無文章。
-    one: 目前共有 1 篇文章。
-    other: "目前共有 %d 篇文章。"
+    one: 目前共計 1 篇文章。
+    other: "目前共計 %d 篇文章。"
 
 state:
   posts: 文章
@@ -61,7 +59,7 @@ cheers:
   nice: 好
   good: 很好
   great: 非常好
-  excellent: 激爆好
+  excellent: 非常屌
 
 keep_on: 繼續努力。
 
