--- a/source/_data/projects.json
+++ b/source/_data/projects.json
@@ -4,4 +4,9 @@
        "url":"https://github.com/Nanue1/Nanue1.github.io/tree/master",
        "desc":"This is a static blog for personal gtd"
     }
+    {
+       "name":"data_crawl",
+       "url":"https://github.com/Nanue1/data_crawl",
+       "desc":"There are some scrapy crawler"
+    }
   ]
