--- a/source/_data/projects.json
+++ b/source/_data/projects.json
@@ -1,6 +1,6 @@
  [
     {
-       "name":"xichidaili",
+       "name":"xicidaili",
        "url":"https://github.com/Nanue1/xicidaili",
        "desc":"爬取xici代理作为代理IP使用"
     },
