--- a/source/_data/projects.json
+++ b/source/_data/projects.json
@@ -1,5 +1,10 @@
  [
     {
+       "name":"csirtg-smrt",
+       "url":"https://github.com/Nanue1/csirtg-smrt",
+       "desc":"get Threeat Intelligence data use csirtg-smrt-py"
+    },
+    {
        "name":"xicidaili",
        "url":"https://github.com/Nanue1/xicidaili",
        "desc":"爬取xici代理作为代理IP使用"
