--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,9 @@
 title: Manue1's blog
 subtitle: 你跟，或者不跟我，我的手就在你手里，不舍 不弃
 description: 等到风景看透,是谁陪你细水长流
-author: Nanue1
-language: zh-Hans
+author: manue1
+#language: zh-Hans
+language: en
 timezone:
 
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
