--- a/themes/next/package.json
+++ b/themes/next/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hexo-theme-next",
+  "name": "next",
   "version": "5.1.1",
   "description": "Elegant theme for Hexo",
   "main": "index.js",
@@ -11,18 +11,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iissnan/hexo-theme-next.git"
+    "url": "www.manue1.site"
   },
   "keywords": [
     "NexT",
     "Hexo"
   ],
-  "author": "iissnan <iissnan@gmail.com>",
-  "license": "MIT",
+  "author": "manue1",
+  "license": "xxoo",
   "bugs": {
-    "url": "https://github.com/iissnan/hexo-theme-next/issues"
+    "url": "manue1.site"
   },
-  "homepage": "https://theme-next.iissnan.com",
+  "homepage": "www.manue1.site",
   "devDependencies": {
     "coffee-script": "^1.10.0",
     "gulp": "^3.9.0",
