--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -99,7 +99,7 @@ social_icons:
   # Icon Mappings.
   # KeyMapsToSocialItemKey: NameOfTheIconFromFontAwesome
   GitHub: https://github.com/Nanue1
-  Wechat: http://7xpyfe.com1.z0.glb.clouddn.com/weixin.jpg
+  WeChat: http://7xpyfe.com1.z0.glb.clouddn.com/weixin.jpg
 
 
 # Blog rolls
