--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -288,7 +288,7 @@ mathjax:
 han: false
 
 # Swiftype Search API Key
-#swiftype_key:
+swiftype_key: Yys4Sh4h85LamrP6odG1
 
 # Baidu Analytics ID
 #baidu_analytics:
