--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -99,7 +99,7 @@ social_icons:
   # Icon Mappings.
   # KeyMapsToSocialItemKey: NameOfTheIconFromFontAwesome
   GitHub: https://github.com/Nanue1
-  WeChat: http://7xpyfe.com1.z0.glb.clouddn.com/weixin.jpg
+  #WeChat: http://7xpyfe.com1.z0.glb.clouddn.com/weixin.jpg
 
 
 # Blog rolls
@@ -194,10 +194,10 @@ post_wordcount:
   separated_meta: true
 
 # Wechat Subscriber
-#wechat_subscriber:
-  #enabled: true
-  #qcode: /path/to/your/wechatqcode ex. /uploads/wechat-qcode.jpg
-  #description: ex. subscribe to my blog by scanning my public wechat account
+wechat_subscriber:
+  enabled: true
+  qcode: /images/wechat-qcode.jpg
+  description: subscribe to my blog by scanning my public wechat account
 
 # Declare license on posts
 post_copyright:
