--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Manue1's blog
 subtitle: 你跟，或者不跟我，我的手就在你手里，不舍 不弃
-description: 等到风景看透,是谁陪你细水长流
+description: 等到风景看透,是谁陪你细水长流 \n等到风景看透,是谁陪你细水长流 \n等到风景看透,是谁陪你细水长流 \n等到风景看透,是谁陪你细水长流 \n等到风景看透,是谁陪你细水长流 \n
 author: manue1
 #language: zh-Hans
 language: en
