--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ search:
 #    branch: master
 deploy:
     type: rsync
-    host: 45.63.127.117 # 这里填写你VPS的IP地址，比如：138.23.23.23
-    user: manue1         # 这里填写你登陆VPS所用的用户名，比如：root
-    root: /home/manue1/hexo
+    host: 103.1.153.220 # 这里填写你VPS的IP地址，比如：138.23.23.23
+    user: root # 这里填写你登陆VPS所用的用户名，比如：root
+    root: /root/hexo
     port: 22             # SSH默认端口号，不需要修改
