--- a/_config.yml
+++ b/_config.yml
@@ -84,6 +84,6 @@ search:
 deploy:
     type: rsync
     host: 103.1.153.220 # 这里填写你VPS的IP地址，比如：138.23.23.23
-    user: root # 这里填写你登陆VPS所用的用户名，比如：root
-    root: /opt/hexo
+    user: manue1 # 这里填写你登陆VPS所用的用户名，比如：root
+    root: /home/manue1/hexo
     port: 22             # SSH默认端口号，不需要修改
